--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 class="song-title">🎵 Ed Sheeran – Perfect</h1>
 
     <div class="player">
-      <audio id="audio" src="assets/audio/perfect.mp3" controls></audio>
+      <audio id="audio" src="assets/perfect.mp3" controls></audio>
     </div>
 
     <div id="lyrics" class="lyrics"></div>
